@@ -5,6 +5,7 @@ ZEsarUX 11.1 - Zorro edition. 30 Julio 2024
 Agregadas máquinas Czerweny CZ 1000, CZ 1500, CZ 1000 Plus, CZ 1500 Plus, CZ 2000, CZ Spectrum, CZ Spectrum Plus
 Agregar función de "Memory Cheat": util para encontrar contadores de energia, bombas, munición o cualquier otro truco de un juego
 Agregado menú para buscar cadenas de texto en memoria
+Agregado grabado rápido de pantalla scr
 
 * Mejoras:
 
