@@ -346,8 +346,6 @@ ok. agregar nombre de indice en todos los menus
 
 
 
--Quick save screen. Y además con tecla F
-Que genere un nombre random o con fecha
 
 -menu display. teclado en pantalla. quiza poner aqui el nuevo de help keyboard. dejar ese viejo solo para drivers de video de tipo texto, cacalib, etc. considerar ademas que ese antiguo solo sale para spectrum y zx80/81. Ojo que el teclado en pantalla de texto debería también salir al pulsar tecla de OSD teclado, pero solo cuando es driver texto
 
