@@ -97,6 +97,7 @@ extern char *bitmap_button_ext_desktop_osdkeyboard[];
 extern char *bitmap_button_ext_desktop_osdadvkeyboard[];
 extern char *bitmap_button_ext_desktop_quickload[];
 extern char *bitmap_button_ext_desktop_quicksave[];
+extern char *bitmap_button_ext_desktop_quicksave_scr[];
 extern char *bitmap_button_ext_desktop_nmi[];
 extern char *bitmap_button_ext_desktop_zxunoprismswitch[];
 extern char *bitmap_button_ext_desktop_nothing[];
