@@ -635,7 +635,7 @@ extern void menu_first_aid_init(void);
 extern void menu_first_aid_random_startup(void);
 extern int menu_first_aid_title(char *key_setting,char *title);
 
-#define MAX_F_FUNCTIONS 62
+#define MAX_F_FUNCTIONS 63
 
 enum defined_f_function_ids {
 	//reset, hard-reset, nmi, open menu, ocr, smartload, osd keyboard, exitemulator.
@@ -649,6 +649,7 @@ enum defined_f_function_ids {
 	F_FUNCION_SMARTLOAD,
 	F_FUNCION_QUICKLOAD,
 	F_FUNCION_QUICKSAVE,
+    F_FUNCION_QUICKSAVE_SCR,
     F_FUNCION_REWIND,
     F_FUNCION_FFW,
 	F_FUNCION_LOADBINARY,
